chore: Some cleanup and fixed collisions when hiding facades with a wrench.